--- a/MyTrips/app/build.gradle
+++ b/MyTrips/app/build.gradle
@@ -46,5 +46,11 @@ dependencies {
     // Paging components
     implementation "androidx.paging:paging-runtime:$paging_version"
     testImplementation "androidx.paging:paging-common:$paging_version"
+    //stetho
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    //test
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test:rules:0.5'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
 }
