--- a/MyTrips/app/src/main/AndroidManifest.xml
+++ b/MyTrips/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
+            android:label="@string/title_activity_maps"
+            android:launchMode="singleTop" />
         <activity
             android:name=".SearchableActivity"
             android:launchMode="singleTop"
@@ -63,6 +64,15 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity
+            android:name=".traveldetail.TravelDetailActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionAndStatusBar"></activity>
+        <activity
+            android:name=".traveldetail.plan.EditPlanActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".traveldetail.TravelDetailActivity"></activity>
     </application>
 
 </manifest>
