--- a/MyTrips/app/src/main/AndroidManifest.xml
+++ b/MyTrips/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.vtcac.thuhuong.mytrips">
 
     <!--
@@ -8,6 +9,13 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:name=".base.MyApplication"
@@ -16,7 +24,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".LauncherActivity"
             android:launchMode="singleTop">
@@ -68,11 +77,28 @@
             android:name=".traveldetail.TravelDetailActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionAndStatusBar"></activity>
+            android:theme="@style/AppTheme.NoActionAndStatusBar" />
         <activity
             android:name=".traveldetail.plan.EditPlanActivity"
             android:launchMode="singleTop"
-            android:parentActivityName=".traveldetail.TravelDetailActivity"></activity>
+            android:parentActivityName=".traveldetail.TravelDetailActivity" />
+        <activity
+            android:name=".traveldetail.diary.EditDiaryActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".traveldetail.TravelDetailActivity" />
+        <activity
+            android:name=".traveldetail.expense.EditExpenseActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".traveldetail.TravelDetailActivity"/>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path" />
+        </provider>
     </application>
 
 </manifest>
