--- a/MyTrips/app/build.gradle
+++ b/MyTrips/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'thuhuong'
+            keyPassword '111111'
+            storeFile file('../RELEASE/keystore.jks')
+            storePassword '111111'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.vtcac.thuhuong.mytrips"
@@ -12,8 +20,19 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
+            aaptOptions { cruncherEnabled = false }
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            android.applicationVariants.all { variant ->
+                variant.outputs.all {
+                    def appName = "MyTrips"
+                    def date = new Date()
+                    def formattedDate = date.format('yyyyMMddHHmmss')
+                    outputFileName = appName + "-${variant.name}-${variant.versionName}-" + formattedDate + ".apk"
+                }
+            }
         }
     }
     testOptions {
@@ -22,18 +41,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'com.google.android.material:material:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
     // circle image
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     // Room components
